# racial-voting

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/data-dictionary/: anes_variables.csv  derived_variables.md
docs/decisions/: 0004-cleaning-rules.md
docs/logs/: codex-session-log.md
docs/prompts/codex/: 00-system.md  01-download.md  02-parse-codebook.md  03-build-panels.md  04-figures.md
docs/references/: bibliography.bib
notebooks/: 00_sandbox.ipynb  01_descriptives.ipynb
scripts/: 00_bootstrap.py  01_download_anes.py  02_build_dictionary.py  03_clean_anes.py  04_make_figures.py
src/: __init__.py  config.py
src/analysis/: descriptives.py  figures.py
src/download/: anes.py  utils.py
src/parse/: codebook.py  questionnaires.py
src/transform/: clean_core.py  derive_vars.py  weights_design.py
src/utils/: io.py  logging.py
tests/: test_question_mapping.py  test_transforms.py
