[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "racial-voting"
version = "0.1.0"
description = "Scaffold for ANES racial voting analysis pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas",
  "pyarrow",
  "requests",
  "beautifulsoup4",
  "pydantic",
  "matplotlib",
  "statsmodels",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]
